# Home-Credit-Risk-API

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: main.py  schemas.py
models/saved_models/: cat_model.pkl  preprocessor.pkl  xgb_model.pkl
src/: feature_engineering.py
src/data_pipeline/: preprocess.py
src/models/: predict.py
